--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ build/
 dist/
 
 # Env files
-.env
+# .env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +21,4 @@ dist/
 # Misc
 .DS_Store
 *.log
+serviceAccountKey.json
