--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,13 @@
 fastapi
 uvicorn
-pymongo
 pandas
 numpy
-scikit-learn
 python-dotenv
-google-generativeai
-python-jose[cryptography]
-bcrypt
-python-multipart
+pymongo
 email-validator
+python-multipart
+python-jose[cryptography]
+passlib[bcrypt]
+bcrypt==4.0.1
 groq
+google-generativeai
