--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.7.0",
+    "framer-motion": "^12.23.26",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
