--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,13 @@
   command = "npm run build"
 
 [[redirects]]
+  from = "/api/*"
+  to = "https://your-backend-url.com/:splat"
+  status = 200
+  force = true
+
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
