--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,12 @@
   publish = "out"
   command = "npm run build"
 
+[functions]
+  directory = "netlify/functions"
+
 [[redirects]]
   from = "/api/*"
-  to = "https://your-backend-url.com/:splat"
+  to = "/.netlify/functions/:splat"
   status = 200
   force = true
 
